# kangaroo

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LAUNCH_PLAN.md  PROGRESS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  analytics.py  api_keys.py  auth.py  billing.py  brain.py  contexts.py  import_export.py  proxy.py  search.py  sessions.py  shifts.py  teams.py  webhooks.py  workflows.py  ws.py
backend/app/core/: database.py
backend/app/core/adapters/: __init__.py  base.py  claude_adapter.py  gemini_adapter.py  openai_adapter.py
backend/app/core/billing/: __init__.py  enforcement.py  limiter.py  tiers.py  trial.py  usage.py
backend/app/core/brain/: __init__.py  conflict.py  consolidator.py  digest.py  gaps.py  recall.py  temporal.py
backend/app/core/cockpit/: __init__.py  chain.py  consensus.py  cost.py  dispatcher.py  orchestrator.py  roles.py  session.py  stream.py
backend/app/core/connectors/: __init__.py  api_proxy.py  manual_import.py
backend/app/core/engine/: __init__.py  ccr.py  compressor.py  entities.py  local_engine.py  parser.py  summarizer.py  ucs_generator.py
backend/app/core/events/: __init__.py  webhook_dispatcher.py
backend/app/core/llm/: __init__.py  client.py  models.py
backend/tests/: __init__.py  conftest.py  test_adapters.py  test_analytics_api.py  test_api_keys.py  test_audit.py  test_auth.py  test_billing_api.py  test_billing_stripe.py  test_brain_api.py  test_chain.py  test_cockpit_session.py  test_compressor.py  test_config.py  test_conflict.py  test_connectors.py  test_consensus.py  test_consolidator.py  test_cost.py  test_digest.py  test_dispatcher.py  test_embeddings.py  test_encryption.py  test_enforcement.py  test_entities.py  test_gaps.py  test_health.py  test_limiter.py  test_llm_client.py  test_orchestrator.py  test_parsers.py  test_policy_engine.py  test_recall.py  test_repository.py  test_roles.py  test_sanitizer.py  test_search_api.py  test_search_engine.py  test_session_store.py  test_sessions.py  (+14 more)
cli/: pyproject.toml
cli/kangaroo_cli/: __init__.py  main.py
sdk/: pyproject.toml
sdk/kangaroo_sdk/: __init__.py  async_client.py  client.py  models.py
(+96 files in other folders)
