[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kangaroo-backend"
version = "0.1.0"
description = "Kangaroo Shift — Backend API and Context Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "PyJWT>=2.10.0",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "argon2-cffi>=23.1.0",
    "spacy>=3.8.0",
    "sentence-transformers>=3.3.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "networkx>=3.4.0",
    "tiktoken>=0.8.0",
    "meilisearch>=0.33.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
