[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kangaroo-cli"
version = "0.1.0"
description = "Kangaroo Shift — CLI tool"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
]

[project.scripts]
kangaroo = "kangaroo_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]
