[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kangaroo-sdk"
version = "0.1.0"
description = "Kangaroo Shift — Python SDK"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
